OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Progress__c/Onboarding_Application_Progress__c.object-meta.xml
<CustomObject>
    <description>Tracks the user’s instance of going through the process (e.g., Vendor Program #123 is at Stage 5)</description>
    <label>Onboarding Application Progress</label>
    <nameField>
        <displayFormat>OAP-{000000}</displayFormat>
        <label>Onboarding ApplicationProgress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Application Progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>