OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Progress__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date/time when the participant finished the onboarding process.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>