OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Progress__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Progress indicator</description>
    <label>Current Stage</label>
    <referenceTo>Onboarding_Application_Stage__c</referenceTo>
    <relationshipLabel>Onboarding Application Progress</relationshipLabel>
    <relationshipName>Onboarding_Application_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>