OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Progress__c/fields/Onboarding_Application_Process__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which onboarding process this progress record is executing.</description>
    <label>Process</label>
    <referenceTo>Onboarding_Application_Process__c</referenceTo>
    <relationshipLabel>Onboarding Application Progress</relationshipLabel>
    <relationshipName>Onboarding_Application_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>