OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Progress__c/fields/Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Started_Date__c</fullName>
    <description>Date/time when the onboarding process was started.</description>
    <label>Started Date</label>
    <type>DateTime</type>
</CustomField>