OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Progress__c/fields/Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vendor program this onboarding process instance applies to.</description>
    <label>Vendor Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>Onboarding Application Progress</relationshipLabel>
    <relationshipName>Onboarding_Application_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>